更新 package.json 中的作者信息，并删除计划文档；修改 index.ts 文件中的描述为“备份命令”

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "backup",
     "update"
   ],
-  "author": "Roo",
+  "author": "Alis",
   "license": "MIT",
   "dependencies": {
     "commander": "^9.0.0"
