修改 index.ts 文件以支持 GitHub 仓库列表功能；新增 readme.md 文件，提供使用说明和中文说明。

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "Alis",
   "license": "MIT",
   "dependencies": {
-    "commander": "^9.0.0"
+    "commander": "^9.0.0",
+    "node-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
